--- a/RemoteSSH/.classpath
+++ b/RemoteSSH/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/home/atul/Science Gateway/jsch-0.1.53.jar"/>
+	<classpathentry kind="lib" path="/home/atul/Science Gateway/apache-log4j-1.2.17/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
