With Maven support

--- a/RemoteSSH/src/org/airavata/teamzenith/config/config.properties
+++ b/RemoteSSH/src/org/airavata/teamzenith/config/config.properties
@@ -2,7 +2,7 @@
 user=atumohan
 host=karst.uits.iu.edu
 port=22
-privatekeypath="C:\\Users\\Anuj\\workspace\\TeamZenith\\RemoteSSH\\key"
-scriptdirectory="C:\\Users\\Anuj\\workspace\\TeamZenith\\RemoteSSH\\scripts"
+privatekeypath=${project.basedir}/key/
+scriptdirectory=scripts/
 privatekeyfile=puttyKey.ppk
 destination=/N/u/atumohan/Karst/Assignment1/
