--- a/BackupRemote/pom.xml
+++ b/BackupRemote/pom.xml
@@ -77,5 +77,10 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.14</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.10</version>
+		</dependency>	
 	</dependencies>
 </project>
