--- a/BackupRemote/.classpath
+++ b/BackupRemote/.classpath
@@ -17,11 +17,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
-		<attributes>
-			<attribute name="maven.pomderived" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -32,8 +27,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/atul/Science Gateway/jsch-0.1.53.jar"/>
-	<classpathentry kind="lib" path="/home/atul/Science Gateway/apache-log4j-1.2.17/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="/home/atul/Science Gateway/commons-compress-1.10.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Anuj/Downloads/eclipse-jee-mars-1-win32/eclipse/libraries/jsch-0.1.53.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Anuj/Downloads/eclipse-jee-mars-1-win32/eclipse/libraries/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
