--- a/KarstShell/pom.xml
+++ b/KarstShell/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>jsch</artifactId>
 			<version>0.1.53</version>
 		</dependency>
+        <dependency>
+        	<groupId>org.scala-lang</groupId>
+        	<artifactId>scala-library</artifactId>
+        	<version>2.11.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
