--- a/KarstShell/pom.xml
+++ b/KarstShell/pom.xml
@@ -23,6 +23,16 @@
     </build>
     <packaging>war</packaging>
     <dependencies>
+    
+    <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.36</version>
+</dependency>
+    <dependency>
+    	<groupId>org.springframework.boot</groupId>
+ 		<artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
