--- a/GatewayApp/pom.xml
+++ b/GatewayApp/pom.xml
@@ -25,9 +25,13 @@
     <name>Spring Boot Rest Api</name>
     <description>REST API for karst computing cluster</description>
     <properties>
-		<java.version>1.8</java.version>
+		<java.version>1.7</java.version>
 	</properties>
-
+<parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.3.2.RELEASE</version>
+    </parent>
     <dependencies>
         <dependency>
             <groupId>com.stormpath.spring</groupId>
@@ -39,6 +43,26 @@
 			<artifactId>jsch</artifactId>
 			<version>0.1.53</version>
 		</dependency>
+		<dependency>
+        	<groupId>org.scala-lang</groupId>
+        	<artifactId>scala-library</artifactId>
+        	<version>2.11.0</version>
+        </dependency>
+		  <dependency>
+    	<groupId>org.springframework.boot</groupId>
+ 		<artifactId>spring-boot-starter-data-jpa</artifactId>
+ 			<version>1.0.0.RELEASE</version>
+    </dependency>
+      
+    <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.36</version>
+</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
