--- a/GatewayApp/src/main/resources/application.properties
+++ b/GatewayApp/src/main/resources/application.properties
@@ -23,14 +23,13 @@ server.ssl.key-store: keystore.p12
 server.ssl.key-store-password: topsecret
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: tomcat
-
 multipart.maxFileSize: 2000KB
 multipart.maxRequestSize: 2000KB
 
 #spring
 spring.datasource.url=jdbc:mysql://localhost:3306/zenith
 spring.datasource.username=root
-spring.datasource.password=demo
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Hibernate
