Changees to properties

--- a/GatewayApp/src/main/resources/application.properties
+++ b/GatewayApp/src/main/resources/application.properties
@@ -29,7 +29,7 @@ multipart.maxRequestSize: 2000KB
 #spring
 spring.datasource.url=jdbc:mysql://localhost:3306/zenith
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=luta
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Hibernate
