--- a/appspec.yml
+++ b/appspec.yml
@@ -2,9 +2,9 @@ version: 0.0
 os: linux
 files:
   - source: .\GatewayApp
-    destination: ~/builds/GatewayApp
+    destination: /home/ec2-user/builds/GatewayApp
 hooks:
   AfterInstall:
-    - location: ~/builds/GatewayApp/install.sh
+    - location: /home/ec2-user/builds/GatewayApp/install.sh
       timeout: 1800
       runas: root
