--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,6 @@ files:
     destination: /home/ec2-user/builds
 hooks:
   AfterInstall:
-    - location: /home/ec2-user/builds/GatewayApp/install.sh
+    - location: /GatewayApp/install.sh
       timeout: 1800
       runas: root
