--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,36 @@ sudo: false
 install: true
 script: cd "GatewayApp" && mvn clean install -DskipTests=true
 
+before_deploy:
+  - cd ..
+  - zip -r GatewayApp.zip GatewayApp appspec.yml || true
+  - mkdir -p "dpl_cd_upload"
+  - mv GatewayApp.zip dpl_cd_upload/GatewayApp.zip || true
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY # declared in Travis repo settings
+    secret_access_key: $AWS_SECRET_KEY
+    local_dir: dpl_cd_upload
+    bucket: teamzenithmain
+    region: us-west-2
+    skip_cleanup: true
+    acl: public_read
+    detect_encoding: true
+    on:
+      repo: airavata-courses/TeamZenith
+      all_branches: true
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY # declared in Travis repo settings
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: teamzenithmain
+    key: GatewayApp.zip
+    bundle_type: zip
+    application: Zenith-Gateway
+    deployment_group: EC2-ProdEnv
+    region: us-west-2
+    on:
+      repo: airavata-courses/TeamZenith
+      all_branches: true
+after_deploy:
+  - echo "Performing after deploy procedures..."
