--- a/GatewayApp/src/main/resources/application.properties
+++ b/GatewayApp/src/main/resources/application.properties
@@ -27,9 +27,9 @@ multipart.maxFileSize: 2000KB
 multipart.maxRequestSize: 2000KB
 
 #spring
-spring.datasource.url=jdbc:mysql://zenith.cfofssvi9hbo.us-west-2.rds.amazonaws.com:3306/zenith
+spring.datasource.url=jdbc:mysql://zenith.cfofssvi9hbo.us-west-2.rds.amazonaws.com/zenith
 spring.datasource.username=root
-spring.datasource.password=gateway
+spring.datasource.password=gatewaydb
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Hibernate
