--- a/GatewayApp/src/main/resources/application.properties
+++ b/GatewayApp/src/main/resources/application.properties
@@ -19,7 +19,7 @@
 #
 stormpath.application.href = https://api.stormpath.com/v1/applications/21VCfRaisfsLh5sRLQEWlY
 server.port: 8443
-server.ssl.key-store: keystore.p12
+server.ssl.key-store: classes/keystore/keystore.p12
 server.ssl.key-store-password: topsecret
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: tomcat
