Reverting back to stormpath with OAuth2 token mgmt

--- a/GatewayAPI/src/main/resources/application.properties
+++ b/GatewayAPI/src/main/resources/application.properties
@@ -26,17 +26,11 @@ server.ssl.keyAlias: tomcat
 multipart.maxFileSize: 2000KB
 multipart.maxRequestSize: 2000KB
 
-#Stormpath variables
-#stormpath.web.register.view = CustomRegister
-#stormpath.web.register.form.fields = givenName, username(required),	 password(required,password)
-#stormpath.web.register.nextUri = /login
-
 #spring
 spring.datasource.url=jdbc:mysql://localhost:3306/zenith
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=luta
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
 
 # Hibernate
 spring.jpa.database-platform: org.hibernate.dialect.MySQL5Dialect
@@ -44,7 +38,3 @@ spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto: update
 entitymanager.packagesToScan: org.airavata.teamzenith
 
-#Application specific
-authentication.oauth.clientid=rajithapp
-authentication.oauth.secret=secret
-authentication.oauth.tokenValidityInSeconds=1800
