--- a/GatewayAPI/src/main/resources/application.properties
+++ b/GatewayAPI/src/main/resources/application.properties
@@ -18,18 +18,18 @@
 # corresponds to this webapp:
 #
 stormpath.application.href = https://api.stormpath.com/v1/applications/21VCfRaisfsLh5sRLQEWlY
-server.port: 8443
-server.ssl.key-store: keystore.p12
-server.ssl.key-store-password: topsecret
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias: tomcat
+#server.port: 8443
+#server.ssl.key-store: keystore.p12
+#server.ssl.key-store-password: topsecret
+#server.ssl.keyStoreType: PKCS12
+#server.ssl.keyAlias: tomcat
 multipart.maxFileSize: 2000KB
 multipart.maxRequestSize: 2000KB
 
 #spring
 spring.datasource.url=jdbc:mysql://localhost:3306/zenith
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=demo
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Hibernate
