--- a/GatewayAPI/src/main/resources/application.properties
+++ b/GatewayAPI/src/main/resources/application.properties
@@ -17,19 +17,23 @@
 # If you have more than one application registered with Stormpath, you must specify which one
 # corresponds to this webapp:
 #
-stormpath.application.href = https://api.stormpath.com/v1/applications/21VCfRaisfsLh5sRLQEWlY
-#server.port: 8443
+server.port: 8443
+server.ssl.key-store: /home/ec2-user/builds/GatewayAPI/target/classes/keystore/keystore.p12
 #server.ssl.key-store: keystore.p12
-#server.ssl.key-store-password: topsecret
-#server.ssl.keyStoreType: PKCS12
-#server.ssl.keyAlias: tomcat
+server.ssl.key-store-password: topsecret
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: tomcat
 multipart.maxFileSize: 2000KB
 multipart.maxRequestSize: 2000KB
 
+endpoints.jmx.domain=api
+endpoints.jmx.uniqueNames=true
+
+
 #spring
-spring.datasource.url=jdbc:mysql://localhost:3306/zenith
+spring.datasource.url=jdbc:mysql://zenith.cfofssvi9hbo.us-west-2.rds.amazonaws.com/zenith
 spring.datasource.username=root
-spring.datasource.password=demo
+spring.datasource.password=gatewaydb
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Hibernate
