travis and app property update

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ deploy:
   - provider: codedeploy
     access_key_id: $AWS_ACCESS_KEY # declared in Travis repo settings
     secret_access_key: $AWS_SECRET_KEY
-    bucket: zenithmicro-api
+    bucket: zenithmicro-ui
     key: ZenUI.zip
     bundle_type: zip
     application: zenith-Microserice-UI
