--- a/ZenUI/src/main/resources/application.properties
+++ b/ZenUI/src/main/resources/application.properties
@@ -22,6 +22,7 @@ stormpath.application.href = https://api.stormpath.com/v1/applications/21VCfRais
 
 server.port: 8443
 server.ssl.key-store: /home/ec2-user/builds/ZenUI/target/classes/keystore/keystore.p12
+#server.ssl.key-store: keystore.p12
 server.ssl.key-store-password: topsecret
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: tomcat
